--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: python
+services:
+  - docker
 python:
   - "2.7"
 install:
   - make deps
 script:
   - make test
+after_succes:
+  - make docker_build
