--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,8 @@ script:
 after_success:
   - make docker_build
   - PASSWORD=$DOCKER_PASSWORD make docker_push
+
+deploy:
+  provider: heroku
+  api_key: hello-world-printer-app
+  secure: ${HEROKU_API_KEY}
