--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ after_success:
 
 deploy:
   provider: heroku
-  api_key: hello-world-printer-app
-  secure: ${HEROKU_API_KEY}
+  app: hello-world-printer-app
+  api_key: ${HEROKU_API_KEY}
